syntax="proto3";

package pb;

option go_package = "./pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string created = 4;
  string updated = 5;
}

message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {}

message DeleteUserResponse {
  string id = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  User user = 1;
  string token = 2;
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string confirmPassword = 4;
  string type = 5;
}

message SignUpResponse {
  User user = 1;
  string token = 2;
}

service Authentication {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
//  rpc GetUser(GetUserRequest) returns (User);
//  rpc ListUsers(ListUsersRequest) returns (stream User);
//  rpc UpdateUser(User) returns (User);
//  rpc DeleteUser(GetUserRequest) returns (DeleteUserResponse);
}